@startuml

class customers {
    -id
    -first_name
    -last_name
    -phone
    -email
    -user_id
    -created_at
    -updated_at
    -identity_document
}

class agents {
    -id
    -first_name
    -last_name
    -city
    -commission_percentage
    -user_id
    -created_at
    -updated_at
}

class attachments {
    -id
    -model_name
    -model_id
    -file_name
    -file_type
    -file_size
    -url
    -created_at
    -updated_at
}

class cities {
    -id
    -name
    -created_at
    -updated_at
}

class properties {
    -id
    -operation_type
    -address
    -photos
    -owners
    -property_price
    -availability_status
    -agent_id
    -created_at
    -updated_at
    -customer_id
    -city_id
    -property_type
    -latitude
    -longitude
    -property_size
}

class interested_customers {
    -id
    -customer_id
    -property_id
    -deposit_amount
    -created_at
    -updated_at
}

customers -- agents
agents -- properties
properties -- interested_customers
attachments -- properties
cities -- properties


@enduml
